Centralize factory events via factory API
